--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,11 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400&display=swap');
-
-
 .about {
     width: 100%;
     padding-left: 30px;
@@ -28,6 +20,7 @@
     margin-top: 30px;
     font-family: 'Quicksand', sans-serif;
     color: #1B1B50;
+    font-weight: 700;
 }
 
 .about__content {
@@ -55,7 +48,7 @@
 }
 
 .about__bigpic {
-    font-family: 'Pacifico', sans-serif;
+    font-family: 'Lora', sans-serif;
     margin-top: 32px;
     text-align: center;
     line-height: 40px;
@@ -84,4 +77,5 @@
 
 .about__outro {
     margin-top: 61px;
+    margin-bottom: 40px;
 }
